# game_api

./: .env  .gitignore  Cargo.toml  jwtRS256.key  jwtRS256.key.pub
migrations/2021-07-26-155228_create_user/: up.sql
migrations/2021-07-26-170313_add_salt/: down.sql  up.sql
src/: db.rs  main.rs  models.rs
src/routes/: auth.rs  mod.rs  user.rs
