[package]
name = "game_api"
version = "0.1.0"
edition = "2018"
author = "Lorne Barnaby"

[dependencies]

rocket = "0.4.5"
rocket_codegen = "0.4.5"
diesel = { version = "1.2.2", features = ["postgres"] }
dotenv = "0.11.0"
r2d2-diesel = "1.0.0"
r2d2 = "0.8.9"
serde = "1.0.116"
serde_derive = "1.0.116"
serde_json = "1.0.58"
env_logger = "0.5.12"
log = "0.4.6"
ring = "0.16.20"
data-encoding = "2.3.2"
hex = "0.4.3"
jsonwebtoken = "7.2.0"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json"]
